# Torqa

./: .dockerignore  .env.example  .gitignore  CANONICAL_IR.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  GOOD_FIRST_ISSUES.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SELF_TEST_REPORT.md  SEMANTICS.md  STATUS.md  TQ_SURFACE.md  docker-compose.yml  project_x_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  trial1.tq  trial2.tq  trial4.tq
.claude/: settings.local.json
.github/: pull_request_template.md
dashboard/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.a11y.config.ts  playwright.config.ts  tailwind.config.ts  vitest.config.ts
desktop/: README.md  __init__.py  package-lock.json  package.json
docs/: AI_BOUNDARY.md  ARCHITECTURE_RULES.md  ARCHITECTURE_STATUS.md  BENCHMARK_COMPRESSION.md  CHECKPOINT_POLICY.md  COMPARISON_REPORT.md  CORE_SPEC.md  DEMO_SURFACES.md  DEPRECATION_MAP.md  DOC_MAP.md  ENGINE_ROUTING.md  EXECUTION_LAYER_PROOF.md  FAILURE_MODES.md  FIRST_PROJECT.md  FLAGSHIP_DEMO.md  IMPLEMENTATION_STATUS.md  IR_PIPELINE.md  IR_VERSIONING.md  IR_VERSION_MIGRATION.md  KNOWN_LIMITS.md  MCP_SERVER.md  MODULE_OWNERSHIP.md  MULTI_DOMAIN_AND_SELFHOSTING.md  P133_DESKTOP_DISTRIBUTION.md  P135_TRIAL_FEEDBACK.md  P137_TRIAL_QUALITY_AUDIT.md  P138_DEMO_AND_VIDEO_KIT.md  P71_DESKTOP_OFFICIAL.md  PACKAGE_DISTRIBUTION.md  PATCH_CONTRACT.md  PRODUCTION_READINESS.md  PROJECTION_MODEL.md  PROTOTYPE_SECURITY.md  QUICKSTART.md  README.md  RELEASE_AND_VERSIONING.md  TOKEN_PROOF.md  (+63 more)
(+822 files in other folders)
